--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.5.0",
   "dependencies": {
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.9",
     "dotenv": "^16.5.0",
     "express": "4",
     "mongoose": "^8.15.0"
